# zelemi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
config/: colors.h  config.h  errors.h  header.h
example/: hello-world.mi  input.mi  nop.mi  reg-initialization.mi  return-1.mi
examples/: hello-world.mi  inf-loop.mi  input.mi  nop.mi  reg-initialization.mi  return-1.mi  this-is-the-end-bin.mi
src/: err.c  get_reg.c  load.c  load_page.c  main.c  mi_startup.c  mi_startup.h  mi_str2hex_s.c  trim.c  zelemi.c
src/com/: adr.c  c_run_commands.c  c_struct.h  chk.c  clr.c  end.c  hlp.c  ldf.c  lic.c  lod.c  nmb.c  run.c
src/com/adr-reg/: reg_x86_64.c
src/lib/: colors.h  load_com.h  load_page.c  mi_config.h
src/libs/: error_handle.c  error_handle.h  pgetopt_error_handle.c  pgetopt_error_handle.h  zelemi_err.h  zelemi_trim.h
src/string/: mi_str2hex_s.c  mi_string.h  trim.c  trim.h
